--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "mocha": "~2.2.1",
+    "chai": "~2.2.0",
+    "lodash": "~3.6.0"
+  }
 }
